--- a/src/app/shared/components/card-player/card-player.component.html
+++ b/src/app/shared/components/card-player/card-player.component.html
@@ -5,10 +5,10 @@
       {{track?.name}}
   </div>
   <div class="buttons-player">
-      <button *ngIf="true" class="play-btn">
+      <button *ngIf="false" class="play-btn">
           <i class="uil " [ngClass]="{'uil-play':true}"></i>
       </button>
-      <button (click)="sendPlay(track) "  *ngIf="false" class="play-btn">
+      <button (click)="sendPlay(track) "  *ngIf="true" class="play-btn">
           <i class="uil uil-play"></i>
       </button>
   </div>
